index page comlete

--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
          
         </section>
 
-        <div class="section section-runa">
+        <section class="section section-runa">
           <div class="section-inner">
             <div class="hero-container">
               <div class="hero-logo">
                 <img
-                  src="https://www.projectmoon.kr/eng/img/main/ruina_img.png"
+                  src="./image/ruina_img.png"
                   alt=""
                 />
               </div>
@@ -171,14 +171,14 @@
               />
             </div>
           </div>
-        </div>
+        </section>
 
-        <div class="section section-film">
+        <section class="section section-film">
           <div class="section-inner">
             <div class="container">
               <div class="logo">
                 <img
-                  src="https://www.projectmoon.kr/eng/img/com/logo.png"
+                  src="./image/logo.png"
                   alt=""
                   class="smoll-logo"
                 />
@@ -203,7 +203,7 @@
                 </div>
                 <div class="picture">
                   <img
-                    src="https://www.projectmoon.kr/admincenter/files/main/theEndCG2[1].png"
+                    src="./image/theEndCG2[1].png"
                     alt=""
                   />
                 </div>
@@ -217,7 +217,7 @@
               </footer>
             </div>
           </div>
-        </div>
+        </secti>
       </main>
     </main>
 
