--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <nav class="links">
             <div class="link">
               <ul class="left-link">
-                <li><a href="./main.html">HOME</a></li>
+                <li><a href="./index.html">HOME</a></li>
                 <li>
                   <div class="dropdown">
                     <a href="./about.html" class="down">ABOUT</a>
